--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Dhanushka Chandana",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.7"
